Resolved the warning